tests/should_fail/bug/1966.stderr
1966.rs:8:1: error: Recursive logic function without a #[variant] clause or a structurally decreasing argument
1966.rs:20:5: error: Recursive logic function without a #[variant] clause or a structurally decreasing argument
1966.rs:29:1: error: Recursive logic function without a #[variant] clause or a structurally decreasing argument
1966.rs:38:1: error: Recursive logic function without a #[variant] clause or a structurally decreasing argument
1966.rs:46:1: error: Recursive logic function without a #[variant] clause or a structurally decreasing argument
error: aborting due to 5 previous errors
